--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,17 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
+        "laravel/scout": "^10.0",
         "laravel/tinker": "^2.10.1",
         "lorisleiva/laravel-actions": "^2.0",
         "spatie/laravel-activitylog": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/boost": "^1.7",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
