--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: .devcontainer/Dockerfile
     container_name: laravel-erp-app
     working_dir: /workspace
     environment:
@@ -53,8 +53,8 @@ services:
       
     volumes:
       - .:/workspace
-      - ./docker/php.ini:/usr/local/etc/php/conf.d/99-laravel.ini:ro
-      - ./docker/.bashrc:/home/www-data/.bashrc:ro
+      - .devcontainer/docker/php.ini:/usr/local/etc/php/conf.d/99-laravel.ini:ro
+      - .devcontainer/docker/.bashrc:/home/www-data/.bashrc:ro
     ports:
       - "8000:8000"
     depends_on:
@@ -84,7 +84,7 @@ services:
       POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=en_US.UTF-8"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./docker/postgres-init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
+      - .devcontainer/docker/postgres-init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
     ports:
       - "5432:5432"
     networks:
@@ -146,7 +146,7 @@ services:
       PGADMIN_CONFIG_ENHANCED_SECURITY: "False"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
-      - ./docker/pgadmin-servers.json:/pgadmin4/servers.json:ro
+      - .devcontainer/docker/pgadmin-servers.json:/pgadmin4/servers.json:ro
     ports:
       - "5050:80"
     networks:
